
}}}
{{{ API Changes

- New methods JEditBuffer.getWordWrap() and JeditBuffer.setWordWrap() (Matthieu Casanova)

- New method DialogChooser.openChooserWindow() showing a chooser dialog (Matthieu Casanova)

- New method DialogChooser.openListChooserWindow() showing a chooser dialog list (Matthieu Casanova)

- New method Buffer.setLineSeparator() (Matthieu Casanova)

- New method Buffer.reloadWithEncoding() (Matthieu Casanova)

- New method StatusBar.updateEvent() (Matthieu Casanova)

- New method BufferSet.contains() (Matthieu Casanova)

- Deprecated methods removed
    StandardUtilities.objectsEqual()
    TextArea.showPopupMenu()
    Mode.acceptFilename()
    OperatingSystem.isDOSDerived()
    OperatingSystem.hasJava17()
    MiscUtilities.getFileNameNoExtension()
    GUIUtilities.prettifyMenuLabel()
    GUIUtilities.setAutoMnemonic()
    GUIUtilities.parseColor()
    GUIUtilities.parseStyle()
    GUIUtilities.adjustForScreenBounds()
    GUIUtilities.requestFocus()
    GUIUtilities.isPopupTrigger()
    GUIUtilities.isMiddleButton()
    GUIUtilities.isRightButton()
    GUIUtilities.getScreenBounds()
    GUIUtilities.showPopupMenu()
    GUIUtilities.showPopupMenu()
    GUIUtilities.isAncestorOf()
    GUIUtilities.getParentDialog()
    GUIUtilities.setEnabledRecursively()
    GUIUtilities.setButtonContentMargin()
    GUIUtilities.makeSameSize()
    GUIUtilities.defaultTableCellSize()
    GUIUtilities.defaultColumnWidth()
    GUIUtilities.defaultRowHeight()
    Buffer.getFile()
    VFSManager.runInAWTThread()
    VFSManager.runInWorkThread() (Matthieu Casanova)

}}}
{{{ Editing

- Status bar encoding widget allow to choose between updating the encoding or reloading
  with a new encoding (Matthieu Casanova)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: